# sudoku

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  rustfmt.toml
.github/workflows/: main.yml
assets/: main-766f06e1d00b7542.css  main-766f06e1d00b7542.css.br  main.css  sudoku-de32fdf728b445ef.js  sudoku-de32fdf728b445ef.js.br  sudoku_bg-0a744eee9e0f0812.wasm  sudoku_bg-0a744eee9e0f0812.wasm.br
src/: main.rs  util.rs
